tests/toy/neg/000621_mutation.toylang
program a = { a = a == a if; } .
